# canvas-lms-mastery-helper

./: .gitignore  INSTALL.md  README.md  config.sample.py  extensions.py  gunicorn.config.py  index.html  masteryhelper.py  passenger_wsgi.py  pyproject.toml  run.py
app/: __init__.py  admin_models.py  canvas_auth.py  canvas_auth_service.py  canvas_sync.py  canvas_sync_service.py  enums.py  errors.py  models.py  schemas.py  util.py
app/blueprints/: assignments_blueprint.py  auth_blueprint.py  courses_blueprint.py  home_blueprint.py  outcomes_blueprint.py  sync_blueprint.py  users_blueprint.py
app/controllers/: assignments.py  outcomes.py  sync.py  users.py
controllers/: assignments.py  courses.py  outcome_attempt.py  outcomes.py  sync.py  users.py
migrations/versions/: 03fb465c701d_add_points_possible_to_assignment.py  10dcfa90976e_unique_course_canvas_id_constraint.py  14deba3e45c3_add_oauth_login.py  19522e0ae552_timestamp_update_on_cron_syncs.py  242679cd3bc1_user_prefs.py  28252c773da0_rename_outcome_attempt_table.py  34067c28e871_constraints_on_oa_attempt_id.py  3a5ff2fefbfa_initial.py  71015f3e67ad_unique_constrain_on_assignments_outcomes.py  7848d1d48dbb_rename_outcome_attempt_attributes_for_.py  8ab6aa1b64c9_look_up_outcome_attempt_by_canvas_id.py  8ff9163ae9b3_add_oa_canvas_id_to_model.py  914892f357c3_handle_enrollments_for_users.py  942761f691bb_assignment_outcome_relationship.py  a2b3fb901b44_initial.py  a687638aff64_use_an_association_object_for_attempts.py  (+5 more)
tests/: base.py  test_assignments.py  test_courses.py  test_outcomes.py  test_users.py  util.py
(+46 files in other folders)
