[tool.poetry]
name = "Canvas SBG Helper"
version = "0.1.0"
description = "A Canvas plugin to allow for better management of Outcomes and grading."
authors = ["Brian Bennett <brian.bennett2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.1"
webargs = "^8.0.1"
Flask-Login = "^0.6.2"
jinja-partials = "^0.1.1"
Flask-DebugToolbar = "^0.11.0"
requests-oauthlib = "^1.3.1"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"
Flask-Admin = "^1.6.0"
PyMySQL = "^1.0.2"
sentry-sdk = {extras = ["flask"], version = "^1.5.6"}
canvasapi = {git = "https://github.com/bennettscience/canvasapi.git", rev = "develop"}
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
Flask-Migrate = "^3.1.0"
pyOpenSSL = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
